# rbase24

./: .gitignore  CHANGELOG.md  README.md  flake.nix  pyproject.toml
.github/workflows/: rbase-publish-pypi.yml  rbase-test.yml
src/rbase24/: __main__.py  cli.py  color.py  config.py  scheme.py  typedefs.py
tests/: config.ini  test_config.py  test_get_schemes.py  test_scheme.py
