[project]
name = "rbase24"
version = "0.3.0"
description = "base16/base24 color scheme terminal viewer"
authors = [{ name = "Simon Kennedy", email = "sffjunkie+code@gmail.com" }]
dependencies = [
    "rich>=13.7.1",
    "pyyaml>=6.0.1",
    "unicode-slugify>=0.1.5",
    "typer>=0.12.3",
]
requires-python = ">=3.11"
readme = "README.md"
license = { text = "MIT" }

[build-system]
requires = ["pdm-backend"]
build-backend = "pdm.backend"


[project.scripts]
rbase24 = "rbase24.cli:main"

[tool.pdm]
distribution = true

[tool.pdm.dev-dependencies]
dev = [
    "pytest>=8.1.1",
    "ruff>=0.4.1",
    "types-PyYAML>=6.0.12.20240311",
    "types-python-slugify>=8.0.2.20240310",
    "mypy>=1.10.0",
    "tox>=4.15.0",
    "pytest-custom-exit-code>=0.3.0",
    "pytest-cov>=5.0.0",
    "sphinx>=7.3.7",
]

[tool.pytest.ini_options]
markers = ["unit", "integration", "asyncio"]
pythonpath = ["src"]
junit_family = "xunit2"
norecursedirs = [
    ".direnv",
    ".venv",
    ".git",
    ".tox",
    ".cache",
    ".settings",
    "dist",
    "build",
    "docs",
]
